# ferrous-browser

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
bench/: README.md  matrix_retry.js  run_matrix.js  run_matrix.ts  run_realistic_matrix.ts
bench/chromiumoxide/: Cargo.toml
bench/chromiumoxide/src/: bench.rs  realistic.rs
bench/headless_chrome/: Cargo.toml
bench/headless_chrome/src/: bench.rs  realistic.rs
bench/playwright/: bench.js  bench.ts  package-lock.json  package.json  realistic.ts
bench/puppeteer/: bench.js  bench.ts  package-lock.json  package.json  realistic.ts
bench/realistic/: README.md  common.ts  signalboard_server.ts
bench/realistic/fixtures/conduit/: app.css  index.html
bench/realistic/fixtures/livewire/: index.html
bench/realistic/fixtures/openverse/: app.css  index.html
bench/realistic/fixtures/rwa/: app.css  index.html
bench/realistic/fixtures/signalboard/: app.css  index.html
bench/realistic/fixtures/todomvc/: app.css  index.html
bench/realistic_server/: Cargo.toml
bench/realistic_server/src/: lib.rs
benches/: browser_bench.rs
docs/: perf-history.md  tracy-setup.md
examples/: basic_example.rs  experiments_bench.rs  goto_bench.rs  idle_verify.rs  launch_bench.rs  lifecycle_probe.rs  parity_bench.rs  profile_run.rs  realistic_bench.rs  suite_bench.rs  wait_bench.rs
scripts/: benchmark_puppeteer.js
src/: browser.rs  cdp.rs  connection.rs  error.rs  har.rs  lib.rs  main.rs  page.rs
tests/: composite_idle.rs  integration.rs  typing.rs
tests/common/: mod.rs  server.rs
