[package]
name = "ferrous-browser"
version = "0.1.0"
edition = "2021"
description = "Fast, async Rust browser automation via the Chrome DevTools Protocol — no Node.js required"
license = "MIT OR Apache-2.0"
repository = "https://github.com/theoxfaber/ferrous-browser"
keywords = ["browser", "automation", "cdp", "chrome", "devtools"]
categories = ["web-programming", "api-bindings"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
futures-util = "0.3"
base64 = "0.21"
reqwest = { version = "0.12", features = ["json"] }
which = "7"
nix = { version = "0.29", features = ["process", "signal"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
env_logger = "0.11"

[[bench]]
name = "browser_bench"
harness = false

[lib]
name = "ferrous_browser"
path = "src/lib.rs"
