[package]
name = "chromiumoxide_bench"
version = "0.0.0"
edition = "2021"

[dependencies]
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "bench"
path = "src/bench.rs"

[[bin]]
name = "realistic"
path = "src/realistic.rs"
