[package]
name = "headless_chrome_bench"
version = "0.0.0"
edition = "2021"

[dependencies]
headless_chrome = "1.0.21"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
realistic_server = { path = "../realistic_server" }
tokio = { version = "1", features = ["rt-multi-thread"] }

[[bin]]
name = "bench"
path = "src/bench.rs"

[[bin]]
name = "realistic"
path = "src/realistic.rs"
